# mobile-agents

./: .gitignore  .plan-context.md  README.md  package.json  pyproject.toml
.github/scripts/: generate_pr_description.py  run-claude.mjs  run_claude.py  run_claude_plan.py
.github/workflows/: agent-implement.yml  agent-plan.yml  art-ci.yml  ci.yml  comment-handler.yml
ADR/: 001-agent-execution-model.md  002-trigger-mechanism.md  004-agent-llm-tooling.md  006-issue-to-pr-contract.md
art/: README.md  pyproject.toml
art/src/art/: __init__.py  example.py
art/tests/: __init__.py  test_example.py
project-docs/adr/: 003-mobile-app-technology.md  005-github-integration-auth.md
project-docs/docs/: CHANGELOG.md  mvp-spec.md
project-docs/tickets/: 002-pwa-scaffold.md
src/: __init__.py  calculator.mjs  claude-runner.mjs  claude_runner.py  date_utils.py  farewell.mjs  github_api.py  random_utils.py  version.py
src/utils/: strings.mjs
tests/: calculator.test.mjs  claude-runner.test.mjs  test_claude_runner.py  test_github_api.py
tests/utils/: strings.test.mjs
tickets/: 001-001-workflow-trigger.md  001-002-branch-creation.md  001-003-A-agent-sdk-script.md  001-003-B-workflow-integration.md  001-003-C-test-execution.md  001-003-claude-code-execution.md  001-004-commit-and-pr.md  001-005-completion-labels.md  001-agent-workflow.md  003-github-oauth.md  004-repo-picker.md  005-issue-list.md  006-ci-caching.md
