[project]
name = "rome"
version = "0.1.0"
description = "GitHub issue to PR automation with Claude"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.18",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
run-claude = "src.claude_runner:main"
